# AdvancedCpp

./: README.md
alignedStorage/: library.h
first lesson/testStorage/: main.cpp
firstLesson/: README.md
firstLesson/alignedStorage/: CMakeLists.txt  library.h
firstLesson/gtestTraining/: CMakeLists.txt  test
firstLesson/testStorage/: CMakeLists.txt  main.cpp
secondLesson/: CMakeLists.txt  README.md  common.h  ownAny.cpp  variantTest.cpp
secondLesson/src/: buffer.h
secondLesson/tests/: devmem.cpp
testStorage/: CMakeLists.txt
